@@ -5,6 +5,7 @@ Removed user-scalable="no"
 Best movements are chosen randomly to prevent loops
 Movements opposing the current direction are no longer considered
 The number of steps the snake looks into the future now depend on its length -> performance improvement for smaller snake lengths
+If death is inevitable, the snake moves closer to the food source
 
 27.06.2020
 Removed keyboard controls
